# mcp_whisper_transcription

./: .dockerignore  .env.example  .gitignore  Dockerfile  FIXES_APPLIED.md  README.md  RESTART_LOOP_FIX.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: docker-publish.yml  release.yml  test.yml
scripts/: debug-server.sh  test-docker.sh
src/mcp_whisper_transcription/: __init__.py  __main__.py  server.py
tests/: __init__.py  test_server.py
